# agent-conductor

./: .gitignore  Agent.md  AgentPrompt.md  CHANGELOG.md  CLAUDE.md  DX-ENHANCEMENTS.md  MANIFEST.in  README.md  pyproject.toml
docs/: agent-profile.md  architecture-diagrams.md  architecture-overview.md  backlog.md  claude-code-provider.md  codebase.md  communication-strategies.md  release-checklist.md  test-plan.md  todo.md
scripts/: launch_agents.sh  teardown_agents.sh
src/agent_conductor/: constants.py
src/agent_conductor/agent_store/: conductor.md  developer.md  document_writer.md  reviewer.md  tester.md
src/agent_conductor/api/: main.py
src/agent_conductor/cli/: formatters.py  main.py
src/agent_conductor/clients/: database.py  tmux.py
src/agent_conductor/mcp_server/: server.py
src/agent_conductor/models/: agent_profile.py  approval.py  enums.py  flow.py  inbox.py  session.py  terminal.py
src/agent_conductor/providers/: base.py  claude_code.py  codex.py  manager.py  q_cli.py
src/agent_conductor/services/: approval_service.py  cleanup_service.py  flow_service.py  inbox_service.py  prompt_service.py  session_service.py  terminal_service.py
src/agent_conductor/ui/: __init__.py
src/agent_conductor/ui/templates/: dashboard.html
src/agent_conductor/utils/: agent_profiles.py  logging.py  pathing.py  terminal.py
test-workspace/: README.md  add.js  deleteNumbers.js  over.js  test-conductor.sh  test-results.txt  test_add.js
tests/: conftest.py  test_api.py  test_cli_launch.py  test_cli_personas.py  test_services.py
